[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "hello-world"
path = "src/main.rs"

[[bin]]

[[bin]]
name = "binding"
path = "src/binding/main.rs"

[[bin]]
name = "destructure"
path = "src/destructure/main.rs"

[[bin]]
name = "shadowing"
path = "src/shadowing/main.rs"

[[bin]]
name = "type_evaluation"
path = "src/type_evaluation/main.rs"
