[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "hello-world"
path = "src/main.rs"

[[bin]]
name = "binding"
path = "src/binding/main.rs"

[[bin]]
name = "destructure"
path = "src/destructure/main.rs"

[[bin]]
name = "shadowing"
path = "src/shadowing/main.rs"

[[bin]]
name = "type_evaluation"
path = "src/type_evaluation/main.rs"

[[bin]]
name = "integer_overflow"
path = "src/integer_overflow/main.rs"

[[bin]]
name = "float_trap"
path = "src/float_trap/main.rs"

[[bin]]
name = "not_a_number"
path = "src/not_a_number/main.rs"

[[bin]]
name = "binding_type"
path = "src/binding_type/main.rs"

[[bin]]
name = "bitwise"
path = "src/bitwise/main.rs"

[[bin]]
name = "range"
path = "src/range/main.rs"