workspace = { members = [ "collections", "qdrant","restaurant"] }
[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"

[[bin]]
name = "hello-world"
path = "src/main.rs"

[[bin]]
name = "type_evaluation"
path = "src/type_evaluation/main.rs"

[[bin]]
name = "integer_overflow"
path = "src/integer_overflow/main.rs"

[[bin]]
name = "float_trap"
path = "src/float_trap/main.rs"

[[bin]]
name = "not_a_number"
path = "src/not_a_number/main.rs"

[[bin]]
name = "binding_type"
path = "src/binding_type/main.rs"

[[bin]]
name = "bitwise"
path = "src/bitwise/main.rs"

[[bin]]
name = "range"
path = "src/range/main.rs"

[[bin]]
name = "num_lib"
path = "src/num_lib/main.rs"

[[bin]]
name = "char"
path = "src/char/main.rs"
